Fix Layout Issue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -112,7 +112,6 @@ text {
   justify-content: center;
   align-items: center;
   padding: 2rem;
-  background-color: rgba(#000, 0.3);
   transition: all 0.2s;
 
   .form {
